# gasgenerator

./: .gitignore  README.md
backend/: .flake8  config.py  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 96a40767bd11_init.py
backend/app/: config.py  database.py  main.py
backend/app/admin/: setup.py
backend/app/admin/views/: admin_auth.py  count_operation_view.py  energy_storage_view.py  engine_hours_period_view.py  machine_view.py  maintenance_time_view.py  materials_price_view.py  price_hours_view.py  user_admin.py
backend/app/models/: __init__.py  auth.py  count_operation.py  energy_storage.py  engine_hours_period.py  machine.py  maintenance_time.py  materials_price.py  price_hours.py  user.py
backend/app/routes/: auth.py
backend/app/schemas/: user.py
backend/app/services/: auth.py
backend/models/: auth.py  user.py
backend/routes/: auth.py  test.py
backend/schemas/: user.py
backend/services/: auth.py
